--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.1",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
   }
 }
